Add JSpecify nullability annotations and enforce with NullAway
Signed-off-by: nscuro <nscuro@protonmail.com>